Внёс правки по комментариям на созвоне

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg">
+    <link rel="shortcut icon" href="images/favicon.svg" type="image/svg">
     <title>Каталог</title>
   </head>
 
@@ -194,46 +194,46 @@
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-1.jpg"
                         width="360" height="380" alt="Фотография любительской селфи-палки.">
-                      <button class="button product-card-btn">Подробнее</button>
                       <div class="product-description">
                         <h3 class="product-card-title">Любительская<br>
                           селфи-палка</h3>
                         <span class="product-card-price">500 ₽</span>
                       </div>
                     </a>
+                    <button class="button product-card-btn">Подробнее</button>
                   </section>
                   <section class="product-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-2.jpg"
                         width="360" height="380" alt="Фотография профессиональной селфи-палки.">
-                      <button class="button product-card-btn">Подробнее</button>
                       <div class="product-description">
                         <h3 class="product-card-title">Профессиональная селфи-палка</h3>
                         <span class="product-card-price">1 500 ₽</span>
                       </div>
                     </a>
+                    <button class="button product-card-btn">Подробнее</button>
                   </section>
                   <section class="product-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-3.jpg"
                         width="360" height="380" alt="Фотография непотопляемой селфи-палки.">
-                      <button class="button product-card-btn">Подробнее</button>
                       <div class="product-description">
                         <h3 class="product-card-title">Непотопляемая<br>селфи-палка</h3>
                         <span class="product-card-price">2 500 ₽</span>
                       </div>
                     </a>
+                    <button class="button product-card-btn">Подробнее</button>
                   </section>
                   <section class="product-card">
                     <a class="product-card-link" href="#">
                       <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-4.jpg"
                         width="360" height="380" alt="Фотография селфи-палки в виде руки.">
-                      <button class="button product-card-btn">Подробнее</button>
                       <div class="product-description">
                         <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
                         <span class="product-card-price">1 500 ₽</span>
                       </div>
                     </a>
+                    <button class="button product-card-btn">Подробнее</button>
                   </section>
                 </div>
                 <button class="button button-secondary" type="button">Загрузить ещё</button>
