Правки декоративных стилей

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </svg></span></a>
           </div>
           <nav class="navigation">
-            <a class="navigation-link navigation-link-active" href="#">Доставка</a>
+            <a class="navigation-link navigation-link-active" href="#">Активный</a>
             <a class="navigation-link" href="#">Гарантия</a>
             <a class="navigation-link" href="#">Контакты</a>
           </nav>
