Стилизует кнопки слайдера

--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
           <div class="slide">
             <img class="slider-image" src="images/slider-img/slider-1.png" width="560" height="560"
               alt="Фото квадрокоптера.">
+            <div class="slider-controls">
+              <button class="slider-button slider-prev" type="button">
+                <span class="visually-hidden">Предыдущий товар</span>
+              </button>
+              <button class="slider-button slider-next" type="button">
+                <span class="visually-hidden">Следующий товар</span>
+              </button>
+            </div>
             <div class="slider-info-container">
               <h3 class="main-title slider-title">Порхает как бабочка, жалит как пчела!</h3>
               <p class="slider-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
@@ -90,6 +98,14 @@
           <div class="slide slider-2">
             <img class="slider-image" src="images/slider-img/slider-2.png" width="560" height="560"
               alt="Фото фитнес-браслета.">
+            <div class="slider-controls">
+              <button class="slider-button slider-prev" type="button">
+                <span class="visually-hidden">Предыдущий товар</span>
+              </button>
+              <button class="slider-button slider-next" type="button">
+                <span class="visually-hidden">Следующий товар</span>
+              </button>
+            </div>
             <div class="slider-info-container">
               <h3 class="main-title slider-title">Худеем правильно!</h3>
               <p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
@@ -106,6 +122,14 @@
           <div class="slide slider-3">
             <img class="slider-image" src="images/slider-img/slider-3.png" width="560" height="560"
               alt="Фото палки для селфи.">
+            <div class="slider-controls">
+              <button class="slider-button slider-prev" type="button">
+                <span class="visually-hidden">Предыдущий товар</span>
+              </button>
+              <button class="slider-button slider-next" type="button">
+                <span class="visually-hidden">Следующий товар</span>
+              </button>
+            </div>
             <div class="slider-info-container">
               <h3 class="main-title slider-title">Делай селфи, как Бен Стиллер!</h3>
               <p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
@@ -122,13 +146,6 @@
               </dl>
             </div>
           </div>
-
-          <button class="slider-button slider-prev" type="button">
-            <span class="visually-hidden">Предыдущий товар</span>
-          </button>
-          <button class="slider-button slider-next" type="button">
-            <span class="visually-hidden">Следующий товар</span>
-          </button>
 
           <div class="pagination-conteiner">
             <ol class="slider-pagination">
