--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   <body>
     <header class="page-header">
       <div class="container catalog-header">
-        <a class="page-header-link" href="#">
+        <a class="page-header-link" href="index.html">
           <img class="page-header-logo" src="images/logo-header.svg" width="145" height="36"
             alt="Логотип интернет-магазина «Device».">
         </a>
@@ -103,7 +103,7 @@
                   <legend class="catalog-filter-title">Стоимость</legend>
                   <div class="range">
                     <div class="range-scale">
-                      <div class="range-bar" style="left: 0; width: 119px;">
+                      <div class="range-bar" style="left: 18px; width: 111px;">
                         <button class="range-toggle toggle-min">
                           <span class="visually-hidden">Изменить минимальную цену.</span>
                         </button>
