--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
                 <path fill="#000"
                   d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z" />
               </svg>Корзина</a>
+            <div class="popover popover-cart">
+              <div class="popover-content">
+                <div class="popover-element">
+                  <img class="popover-element-img" src="images/popover/product-1-small5.jpg" width="39px" height="43px"
+                    alt="Любительская селфи палка.">
+                  <h2 class="popover-element-title">Любительская<br>селфи-палка</h2>
+                  <button class="popover-delete-btn"></button>
+                </div>
+                <div class="popover-element">
+                  <img class="popover-element-img" src="images/popover/product-1-small6.jpg" width="39px" height="43px"
+                    alt="Профессиональная
+                  селфи-палка.">
+                  <h2 class="popover-element-title">Профессиональная<br>селфи-палка </h2>
+                  <button class="popover-delete-btn"></button>
+                </div>
+                <div class="popover-summary">
+                  <span class="popover-summary-text">Товаров: 2</span>
+                  <span class="popover-summary-text">Сумма: 2000 &#8381</span>
+                </div>
+                <button class="button popover-button" type="button">Открыть корзину</button>
+              </div>
+            </div>
           </div>
         </div>
         <div class="navigation-row">
