Задаёт кнопкам стили при разных состояниях

--- a/index.html
+++ b/index.html
@@ -47,16 +47,20 @@
             <div class="popover popover-cart">
               <div class="popover-content">
                 <div class="popover-element">
-                  <img class="popover-element-img" src="images/popover/product-1-small5.jpg" width="39px" height="43px"
-                    alt="Любительская селфи палка.">
-                  <h2 class="popover-element-title">Любительская<br>селфи-палка</h2>
+                  <a class="popover-element-text" href="#">
+                    <img class="popover-element-img" src="images/popover/product-1-small5.jpg" width="39px"
+                      height="43px" alt="Любительская селфи палка.">
+                    <h2 class="popover-element-title">Любительская<br>селфи-палка</h2>
+                  </a>
                   <button class="popover-delete-btn"></button>
                 </div>
                 <div class="popover-element">
-                  <img class="popover-element-img" src="images/popover/product-1-small6.jpg" width="39px" height="43px"
-                    alt="Профессиональная
+                  <a class="popover-element-text" href="#">
+                    <img class="popover-element-img" src="images/popover/product-1-small6.jpg" width="39px"
+                      height="43px" alt="Профессиональная
                   селфи-палка.">
-                  <h2 class="popover-element-title">Профессиональная<br>селфи-палка </h2>
+                    <h2 class="popover-element-title">Профессиональная<br>селфи-палка </h2>
+                  </a>
                   <button class="popover-delete-btn"></button>
                 </div>
                 <div class="popover-summary">
