--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
                   xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" viewBox="0 0 16 16">
                   <path fill="#000" d="M16 7H9V0H7v7H0v2h7v7h2V9h7V7Z" />
                 </svg></span></a>
+            <div class="nav-popover">
+              <div class="nav-popover-container">
+                <div class="nav-popover-content">
+                  <a class="nav-popover-title nav-popover-title-active" href="#">Виртуальная реальность</a>
+                  <a class="nav-popover-title" href="#">Фитнес-браслеты</a>
+                  <a class="nav-popover-title" href="#">Экшн-камеры</a>
+                  <a class="nav-popover-title" href="#">Квадрокоптеры</a>
+                  <a class="nav-popover-title" href="#">Моноподы для селфи</a>
+                  <a class="nav-popover-title" href="#">Умные часы</a>
+                </div>
+              </div>
+            </div>
           </div>
           <nav class="navigation">
             <a class="navigation-link navigation-link-active" href="#">Активный</a>
