--- a/index.html
+++ b/index.html
@@ -507,6 +507,60 @@
         </section>
       </div>
     </footer>
+    <div class="modal-container">
+      <div class="modal modal-auth">
+        <div class="modal-title-row">
+          <h2 class="modal-title">Доставка под заказ</h2>
+          <button class="modal-close-button">
+            <span class="visually-hidden">Закрыть</span>
+          </button>
+        </div>
+        <form class="auth-form" action="https://echo.htmlacademy.ru/" method="post">
+          <div class="field-group">
+            <label class="auth-name-label" for="auth-name">Ваше имя:</label>
+            <input class="auth-form-field name-field" type="text" name="auth-name" id="auth-name"
+              placeholder="Введите имя">
+            <svg class="modal-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="13"
+              height="12" fill="none" viewBox="0 0 13 12">
+              <path fill="#B3B3B3"
+                d="M0 12h13c-.2-2.6-2.1-4.8-4.7-5.5 1-.6 1.7-1.7 1.7-3C10 1.6 8.4 0 6.5 0S3 1.6 3 3.5c0 1.3.7 2.4 1.7 3C2.1 7.2.2 9.4 0 12Z" />
+            </svg>
+          </div>
+          <div class="field-group">
+            <label class="auth-name-label" for="auth-email">Ваш e-mail:</label>
+            <input class="auth-form-field email-field" type="email" name="auth-email" id="auth-email" value="почта">
+            <svg class="modal-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="15"
+              height="12" fill="none" viewBox="0 0 15 12">
+              <path fill="#B3B3B3"
+                d="M7.6 8c-.4 0-.6-.1-1-.3L0 4v7c0 .6.4 1 .9 1h13.2c.6 0 .9-.4.9-1V4L8.5 7.7c-.4.2-.6.3-.9.3Zm6.5-8H.9C.4 0 0 .5 0 1v.8L7.5 6 15 1.8V1c0-.5-.4-1-.9-1Z" />
+            </svg>
+          </div>
+          <div class="field-group">
+            <label class="auth-name-label" for="auth-extra">Что нужно привезти:</label>
+            <input class="auth-form-field extra-field" type="text" name="auth-extra" id="auth-extra"
+              placeholder="В свободной форме">
+          </div>
+          <div class="field-group">
+            <label class="auth-name-label quantity-label" for="auth-quantity">Количество:</label>
+            <div class="quantity-block">
+              <button class="quantity-btn quantity-btn-minus">
+                <svg class="modal-btn-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="16" height="2" fill="none" viewBox="0 0 16 2">
+                  <path fill="#000" d="M16 0H0v2h16V0Z" />
+                </svg></button>
+              <input class="auth-form-field quantity-field" type="number" name="auth-quantity" id="auth-quantity">
+              <button class="quantity-btn quantity-btn-plus">
+                <svg class="modal-btn-icon" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="16" height="16" fill="none" viewBox="0 0 16 16">
+                  <path fill="#000" d="M16 7H9V0H7v7H0v2h7v7h2V9h7V7Z" />
+                </svg>
+              </button>
+            </div>
+          </div>
+          <button class="button modal-form-button" type="submit">Отправить</button>
+        </form>
+      </div>
+    </div>
   </body>
 
 </html>
