--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
         </section>
       </div>
     </footer>
-    <div class="modal-container">
+    <div class="modal-container modal-container-close">
       <div class="modal modal-auth">
         <div class="modal-title-row">
           <h2 class="modal-title">Доставка под заказ</h2>
